--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "heroicons": "^1.0.5",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-google-forms-hooks": "^1.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.1",
