--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@iconscout/react-unicons": "^1.1.6",
     "heroicons": "^1.0.5",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-google-forms-hooks": "^1.2.4"
+    "react-google-forms-hooks": "^1.2.4",
+    "react-icons": "^4.6.0",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.1",
