--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@iconscout/react-unicons": "^1.1.6",
+    "babel-plugin-macros": "^3.1.0",
     "heroicons": "^1.0.5",
     "next": "12.0.7",
     "react": "17.0.2",
