--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@iconscout/react-unicons": "^1.1.6",
     "babel-plugin-macros": "^3.1.0",
     "heroicons": "^1.0.5",
@@ -16,7 +17,8 @@
     "react-dom": "17.0.2",
     "react-google-forms-hooks": "^1.2.4",
     "react-icons": "^4.6.0",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.1",
